# SmallFBX

./: .gitignore  LICENSE.txt  README.md
src/: CMakeLists.txt  SmallFBX.h  SmallFBX.sln  SmallFBX.vcxproj  Test.vcxproj  setup.bat  setup.vcxproj
src/SmallFBX/: CMakeLists.txt  pch.h  sfbx.natvis  sfbxAlgorithm.h  sfbxAnimation.cpp  sfbxAnimation.h  sfbxDeformer.cpp  sfbxDeformer.h  sfbxDocument.cpp  sfbxDocument.h  sfbxGeometry.cpp  sfbxGeometry.h  sfbxInternal.h  sfbxMaterial.cpp  sfbxMaterial.h  sfbxMath.h  sfbxMeta.h  sfbxModel.cpp  sfbxModel.h  sfbxNode.cpp  sfbxNode.h  sfbxObject.cpp  sfbxObject.h  sfbxParser.h  sfbxProperty.cpp  sfbxProperty.h  sfbxRawVector.h  sfbxTokens.h  sfbxTypes.h  sfbxUtil.h  sfbxUtils.cpp
src/Test/: CMakeLists.txt  Test.cpp  Test.h  TestFBX.cpp  pch.h
